<resources>
    <string name="app_name">Alarm App</string>
    <string name="alarm" translatable="false">ALARM</string>
    <string name="world_clock" translatable="false">WORLD CLOCK</string>
    <string name="timer">TIMER</string>
    <string name="stop_watch">STOP WATCH</string>
    <string name="clock">Clock</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_an_alarm">Add an alarm</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="calendar">Calendar</string>
    <string name="clock_title">Clock Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="vibrating">Vibrating</string>
    <string name="ringtone">Ringtone</string>
    <string name="default_ringtone">Default</string>
    <string name="alarm_off">Alarm off</string>
    <string name="arrows">Arrows</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="default_clock_title">Default</string>
    <string name="ok">Ok</string>
    <string name="everyday">Everyday</string>
    <string name="delete_selected_alarm">Delete selected alarm</string>
    <string name="alarm_will_delete">Alarm will delete.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="timer_service">Timer Service</string>
</resources>